hard-gists/4289538/run.log
=== Docker Run Log for 4289538 ===
Started at: Mi 29. Okt 14:35:22 CET 2025

[2025-10-29 14:35:22] START: Running container for 4289538
[2025-10-29 14:35:22] SUCCESS: Container 9a12f4d1b04d0f2379fea7e24fcd8a372c76f398b408733a74c9d175b5ff01bc started for 4289538
=== Container logs for 4289538 ===
  File "/snippet.py", line 18
    print "Current document saved"
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 4289538 ===
[2025-10-29 14:35:24] INFO: Container 9a12f4d1b04d0f2379fea7e24fcd8a372c76f398b408733a74c9d175b5ff01bc has stopped
